syntax = "proto2";
package antalk.user;
import "im.base.proto";
option java_package = "com.antalk.pb";
//option optimize_for = LITE_RUNTIME;

option cc_generic_services = true;

message LoginReq {
	required string username = 1;
	required string password = 2;
	required im.base.UserStatType online_status = 3;
	required im.base.ClientType client_type = 4;
	optional string client_version = 5;
}

message LoginRes {
	required uint32 server_time = 1;
	required im.base.ResultType result_code = 2;
	optional string result_string = 3;
	optional im.base.UserStatType online_status = 4;
	optional im.base.UserInfo user_info = 5;
}


service LoginService {
      rpc Login(LoginReq) returns (LoginRes);
};
